--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-test_config/
+src/test_config/
 
 .python-version
